scrollbar fix

--- a/src/assets/scss/components/_defaults.scss
+++ b/src/assets/scss/components/_defaults.scss
@@ -20,11 +20,20 @@ body {
     left: 0;
     top: 0;
     height: 100%;
-    padding-right: 17px;
     overflow: hidden;
 
     @include media-breakpoint-down(lg){
       padding-right: 0;
+    }
+
+    &:after {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: $white;
     }
   }
 
